# msgflux

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN_TOOL_REVIEW.md  README.md  STREAMING_TOOL_CALLS.md  demo_durable_inline_v2.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_async_agent.py  test_dotdict_hidden_keys.py  test_msgtrace_migration.py  test_profiles.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  labeler.yml  merge-bot.yml  pre-commit-autoupdate.yml  publish.yml  release-drafter.yml  validate-release.yml
CHANGELOG/: index.html
_includes/init_chat_completion_model/: index.html
api-reference/: index.html
api-reference/databases/database/: index.html
api-reference/models/model/: index.html
api-reference/models/model_gateway/: index.html
api-reference/nn/functional/: index.html
blog/: index.html
blog/archive/2023/: index.html
blog/archive/2025/: index.html
blog/category/agents/: index.html
blog/category/multimodal/: index.html
blog/category/rag/: index.html
blog/category/search/: index.html
changelog/: index.html
data/databases/kv/: index.html
data/databases/vector/: index.html
dependency-management/: index.html
docs/: auto-module.md  dependency-management.md  index.md  quickstart.md
docs/anatomy/: environments.md
docs/api-reference/nn/: functional.md
docs/hooks/: copy_markdown.py
docs/learn/: autoparams.md  dotdict.md  inline.md  installation.md  message.md  telemetry.md
docs/learn/models/: chat_completion.md  image_text_to_image.md  model.md  model_gateway.md  moderation.md  speech_to_text.md  text_embedder.md  text_to_image.md  text_to_speech.md
docs/learn/nn/: agent.md  auto_module.md  event-streaming.md  functional.md  inline.md  message.md  module.md  predictor.md  retriever.md  speaker.md  transcriber.md
docs/learn/parsers/: index.md
docs/learn/stores/: checkpoint.md
docs/stylesheets/: extra.css
examples/: agent_streamer_demo.py
generation/cot/: index.html
generation/tot/: index.html
getting-started/agent/: index.html
getting-started/multimodal-agent/: index.html
getting-started/rag/: index.html
guides/sequential/: index.html
learn/autoparams/: index.html
learn/dotdict/: index.html
learn/inline/: index.html
learn/installation/: index.html
learn/message/: index.html
learn/parsers/: index.html
learn/telemetry/: index.html
message/: index.html
models/chat_completion/: index.html
models/image_embedder/: index.html
models/image_text_to_image/: index.html
models/model/: index.html
models/model_gateway/: index.html
models/moderation/: index.html
models/speech_to_text/: index.html
models/text_classifier/: index.html
models/text_embedder/: index.html
models/text_reranker/: index.html
models/text_to_image/: index.html
models/text_to_speech/: index.html
nn/functional/: index.html
nn/module/: index.html
parsers/parser/: index.html
quickstart/: index.html
retrievers/retriever/: index.html
scripts/: release.sh  setup-branch-protection.sh  setup-labels.sh
search/: search_index.json
src/msgflux/: __init__.py  cache.py  chat_messages.py  context.py  dotdict.py  envs.py  examples.py  exceptions.py  guard.py  logger.py  message.py  version.py
stylesheets/: extra.css
tests/: conftest.py  test_agent_as_tool_with_signature.py  test_agent_durable.py  test_agent_generation_schema.py  test_agent_image_detail.py  test_agent_include_date.py  test_agent_named_kwargs.py  test_agent_signature_annotations.py  test_agent_streamer_integration.py  test_agent_templates_fix.py  test_async_hooks.py  test_autoparams.py  test_chat_messages.py  test_checkpoint_store.py  test_data_types.py  test_dotdict.py  test_embedder.py  test_examples.py  test_image_block_kwargs_refactor.py  test_mcp_fastmcp.py  test_streaming.py  test_tool_config_decorator.py  test_tool_control.py  test_tool_signal.py  test_tools_visualization.py  test_type_inheritance_struct.py  test_video_block_kwargs.py
tests/auto/: __init__.py  test_cache.py  test_config.py  test_models.py  test_module.py  test_params.py  test_sources.py
tests/dsl/: test_checkpoint.py  test_inline.py  test_inline_durable.py  test_runtime.py  test_signature.py  test_sqlite_store.py  test_typed_parsers.py
tests/environments/: __init__.py  test_pool.py
tests/evaluate/: __init__.py  test_async_metrics.py  test_evaluator.py  test_metrics.py
tests/generation/: __init__.py  test_code_act.py  test_control_flow.py  test_reasoning.py  test_templates.py
tests/integration/: __init__.py  test_agent_durable_e2e.py  test_agent_sandbox.py  test_codeact_sandbox.py  test_collaboration.py  test_collaboration_e2e.py  test_pot_sandbox.py  test_react.py  test_rlm.py  test_team_e2e.py
tests/models/: test_base.py  test_cache.py  test_gateway.py  test_httpx.py  test_model.py  test_profiles.py  test_registry.py  test_response.py  test_tool_call_agg.py
tests/nn/: test_events.py  test_functional.py  test_functional_durable.py  test_guard.py  test_parameter.py
tests/optim/: __init__.py  test_agent_integration.py  test_async_optimizers.py  test_bootstrap.py  test_callbacks.py  test_checkpointer.py  test_copro.py  test_early_stopping.py  test_export.py  test_gepa.py  test_labeled_fewshot.py  test_mipro.py  test_optimizer.py  test_schedulers.py  test_simba.py  test_visualization.py
tests/parsers/: __init__.py  test_parser.py
tests/protocols/: __init__.py
tests/telemetry/: __init__.py  test_config.py  test_span_agent_decorators.py  test_span_tool_decorators.py
tests/tools/: __init__.py  test_config.py  test_toolflowcontrol.py
tests/trainer/: __init__.py  test_trainer.py
tests/utils/: test_chat.py  test_common.py  test_console.py  test_convert.py  test_encode.py  test_hooks.py  test_imports.py  test_inspect.py  test_logging.py  test_mermaid.py  test_msgspec.py  test_pooling.py  test_templates.py  test_tenacity.py  test_torch.py  test_validation.py  test_xml.py
(+447 files in other folders)
