[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "msgflux"
dynamic = ["version"]
description = "Messages and Dynamic AI Systems in Python powered by pretrained models"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilson@msgflux.com" }
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",  
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "code2mermaid>=0.3.0",
    "jinja2>=3.1.6",
    "mermaid-py>=0.8.0",
    "msgspec-ext>=0.1.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "tenacity>=8.2.3",
    "tomli-w>=1.2.0",
    "typing-extensions>=4.14.1",
    "uvloop>=0.21.0",
]

[tool.hatch.version]
path = "src/msgflux/version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/msgflux/msgspec-ext"
Documentation = "https://github.com/msgflux/msgspec-ext"
Repository = "https://github.com/msgflux/msgspec-ext"

[project.optional-dependencies]
openai = [
    "openai>=1.97.1",
    "opentelemetry-instrumentation-openai>=0.43.1",
]
httpx = [
    "httpx>=0.28.1",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "D100",    # Allow missing docstring in top level module
  "D104",    # Allow missing docstring in public package
  "D105",    # Allow missing docstring in magic method
  "D203",    # Allow docstring directly below class definition (as enforced by D211)
  "D213",    # Allow multi-line-summary on first line of docstring (as enforced by D212)
  "D401",    # Allow non imperative mood in docstring
  "D413",    # Allow no new line at end of docstring.
  "EM101",   # Allow `raise ValueError(msg)`
  "EM102",   # Allow f strings in `raise` statements
  "FBT003",  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "TID252",  # Allow relative imports
  "UP007",   # Allow `from typing import Optional` instead of `X | None`
  "UP035",   # Allow `from typing import Sequence` instead of `Sequence[X]`
  "PLR0913",
]
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["msgflux"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "D",
  "PLR0911",
  "PLR0912",
  "PLR0915",
  "PLR2004",
  "S101",
  "S105",
  "S106",
  "S107",
  "TID252",
]
