[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "msgflux"
dynamic = ["version"]
description = "Messages and Dynamic AI Systems in Python powered by pretrained models"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilson@msgflux.com" }
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "jinja2>=3.1.6",
    "msgspec-ext>=0.5.0",
    "msgtrace-sdk>=1.1.0",
    "tenacity>=8.2.3",
    "typing-extensions>=4.14.1",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[tool.hatch.version]
path = "src/msgflux/version.py"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist[psutil]>=3.6.1",
    "ruff>=0.12.5",
    "twine>=6.0.1",
    "packaging>=24.0",
    # Dependencies for testing retrievers
    "httpx>=0.28.1",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "bm25s>=0.1.0",
    "wikipedia>=1.4.0",
]
doc = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-copy-markdown>=0.1.0",
    "mkdocs-material>=9.6.21",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pymdown-extensions>=10.16.1",
]

[project.urls]
Homepage = "https://github.com/msgflux/msgflux"
Documentation = "https://github.com/msgflux/msgflux"
Repository = "https://github.com/msgflux/msgflux"

[project.optional-dependencies]
openai = [
    "openai>=1.97.1",
    "opentelemetry-instrumentation-openai>=0.43.1",
]
httpx = [
    "httpx>=0.28.1",
]
checkpoint = [
    "aiosqlite>=0.20.0",
]
plot = [
    "code2mermaid>=0.3.0",
    "mermaid-py>=0.8.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "D100",    # Allow missing docstring in top level module
  "D101",    # Allow missing docstring in public class
  "D102",    # Allow missing docstring in public method  
  "D103",    # Allow missing docstring in public functions
  "D104",    # Allow missing docstring in public package
  "D105",    # Allow missing docstring in magic method
  "D107",    # Allow missing docstring in `__init__`
  "D203",    # Allow docstring directly below class definition (as enforced by D211)
  "D205",    # Allow docstring multiline without blank space
  "D213",    # Allow multi-line-summary on first line of docstring (as enforced by D212)
  "D401",    # Allow non imperative mood in docstring
  "D413",    # Allow no new line at end of docstring.
  "D417",    # Allow missing argument description  
  "EM101",   # Allow `raise ValueError(msg)`
  "EM102",   # Allow f strings in `raise` statements
  "FBT003",  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "PLR0911", # Allow many returns
  "PLR0912", # Allow many branches
  "PLR0913",
  "PLR0915", # Allow many statements
  "PLR2004", # Allow magic values to constants  
  "N812",    # Allow Lowerscae imports as non-lowercase
  "N817",    # Allow CamelCase imports that are aliased as acronyms.
  "TID252",  # Allow relative imports
  "RUF012",  # Allow mutable class attributes should not be annotated
  "RUF022",  # Allow __all__ sorting different from isort (we use runtime check)
  "UP006",   # Allow List instead list to type hyint  
  "UP007",   # Allow `from typing import Optional` instead of `X | None`  
  "UP035",   # Allow `from typing import Sequence` instead of `Sequence[X]`
]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# Allow vars parameter name in agent and tool modules (core library feature)
"src/msgflux/nn/modules/agent.py" = ["A001","A002"]
"src/msgflux/nn/modules/tool.py" = ["A001","A002"]
# Allow MCP protocol's camelCase naming convention
"src/msgflux/protocols/mcp/types.py" = ["N815"]
# Regex patterns in html.py are inherently long and cannot be split
"src/msgflux/utils/html.py" = ["E501"]
# Jinja templates in string literals cannot be line-wrapped
"src/msgflux/generation/reasoning/react.py" = ["E501"]
"tests/**/*" = [
  "A",        # Builtin shadowing (e.g., vars, input, type in test helpers)
  "ARG",      # Unused arguments (fixtures, interface compliance)
  "B007",     # Unused loop control variable
  "D",        # Docstrings not required in tests
  "E402",     # Module import not at top (conditional imports for optional deps)
  "E501",     # Line too long (test strings/assertions can be verbose)
  "E712",     # Allow == True/False comparisons in assertions
  "E721",     # Allow type comparisons with == in assertions
  "E731",     # Allow lambda assignment in tests
  "F401",     # Unused imports (imported for side effects or fixtures)
  "F811",     # Redefined while unused (parametrize overrides)
  "F841",     # Unused variables (e.g., exception capture)
  "FBT",      # Boolean args in test helper functions
  "I001",     # Unsorted imports
  "N803",     # Invalid argument names (test fixtures naming)
  "N806",     # Non-lowercase variable in function
  "PLC0415",  # Imports outside top-level (intentional lazy imports in tests)
  "PLR0911",
  "PLR0912",
  "PLR0915",
  "PLR1711",  # Useless return
  "PLR2004",
  "RUF006",   # Asyncio dangling task (intentional in test helpers)
  "RUF013",   # Implicit optional
  "RUF015",   # Unnecessary iterable allocation for first element
  "RUF034",   # Useless if-else
  "S101",
  "S105",
  "S106",
  "S107",
  "T201",     # print() allowed in tests
  "TID252",
]
# Parsers use lazy imports for optional heavy dependencies (C901, PLC0415),
# interface methods must accept **kwargs even if unused (ARG002), and
# try-except-pass is intentional for optional parsing features (S110).
"src/msgflux/data/parsers/**/*" = [
  "ARG002",   # Interface compliance: __call__/acall must accept **kwargs
  "C901",     # Complex parsing logic is inherent to document parsing
  "FBT001",   # Boolean args in private helpers
  "FBT002",   # Boolean default in private helpers
  "PLC0415",  # Lazy imports for optional dependencies (pypdf, docx, etc.)
  "PLW2901",  # Loop variable reassignment for row padding
  "S110",     # try-except-pass intentional for optional parsing steps
]
[tool.ruff.lint.isort]
known-first-party = ["msgflux"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
